--- a/App.html
+++ b/App.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="keywords" content="Babelyx,Babely,巴贝历,巴别历,巴别图书馆,巴贝历大千世界,PEX,IPFS,AIGC" />
+	<meta name="keywords" content="Babelyx,Babely,巴贝历,巴别历,巴别图书馆,巴贝历大千世界,BLX,IPFS,AIGC" />
 	<meta name="description" content="Mint Plant Your Creations to Grow Your Gains Forever" /><!-- google 225Byte -->
 	<title>
 		<%= htmlWebpackPlugin.options.title %>
